# dash-fda

./: .codeclimate.yml  .dockerignore  .gitignore  .pyup.yml  .travis.yml  Dockerfile  LICENSE  Procfile  README.md  deploy.sh  pyproject.toml  requirements.txt  setup.py
assets/: custom-script.js
dash-fda/: example.py
dash_fda/: app.py
dash_fda/components/: __init__.py  components.py
dash_fda/constants/: __init__.py  constants.py
dash_fda/exceptions/: __init__.py
dash_fda/utils/: __init__.py  utils.py
requirements/: development.txt  production.txt  shared.txt
tests/: context.py  test_app.py  test_example.py
